refactor: remove query params from asset urls

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Office Politics</title>
-  <link rel="stylesheet" href="/src/style.css?v=1.0.0-alpha1">
+  <link rel="stylesheet" href="/src/style.css">
   <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <meta name="theme-color" content="#374151">
   <meta name="mobile-web-app-capable" content="yes">
@@ -82,7 +82,7 @@
     <button id="restart-button">Yeniden Başla</button>
   </div>
 
-  <script type="module" src="/src/main.js?v=1.0.0-alpha8"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
