gameplay: update info text

--- a/web/index.html
+++ b/web/index.html
@@ -69,7 +69,7 @@
         Office Politics, ofis hayatındaki kararları simüle eden bir oyundur.<br>
         Kartları sağa veya sola kaydırarak kararlar verin ve<br>
         ❤️motivasyon, 📈performans, 👥iş arkadaşları ve 👔patron memnuniyetini<br>
-        dengelemeye çalışın.<br><br>
+        dengelemeye çalışarak oyunu kazanmaya çalışın.<br><br>
 
         Kapatmak için herhangi bir yere tıklayın.
       </p>
