gameplay: show personal best on info/gameover  screen

--- a/web/index.html
+++ b/web/index.html
@@ -71,6 +71,8 @@
         ❤️motivasyon, 📈performans, 👥iş arkadaşları ve 👔patron memnuniyetini<br>
         dengelemeye çalışarak oyunu kazanmaya çalışın.<br><br>
 
+        <span id="info-best-score" class="best-score-display"></span><br><br>
+
         Kapatmak için herhangi bir yere tıklayın.
       </p>
     </div>
