gameplay: add sound effect

--- a/web/index.html
+++ b/web/index.html
@@ -41,8 +41,9 @@
     </div>
 
     <div id="card-area">
-      <div class="card-stack-item"></div>
-      <div class="card-stack-item"></div>
+      <!-- Stack items will be dynamically added/managed by JS -->
+      <!-- <div class="card-stack-item"></div> -->
+      <!-- <div class="card-stack-item"></div> -->
 
       <div id="card">
         <div id="card-text">Yükleniyor...</div>
@@ -54,8 +55,10 @@
       </div>
     </div>
 
-
+    <!-- Control Icons -->
     <div id="about-icon">i</div>
+    <div id="sound-toggle-button">🔊</div> <!-- Position controlled by CSS -->
+
     <div id="copyright">© 2025 Office Politics.</div>
   </div>
 
